fixing alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ li:hover {
 	height: auto;
 	background-color: #e9e9e9;
 	padding: 0 10px;
+	clear: both;
 }
 #discover img {
 	padding-bottom: 0;
